--- a/android/libs/ab-pull-to-refresh/project.properties
+++ b/android/libs/ab-pull-to-refresh/project.properties
@@ -12,7 +12,4 @@
 
 # Project target.
 target=Google Inc.:Google APIs:17
-android.library.reference.1=libs/ab-sherlock-4.2
-android.library.reference.2=libs/facebook
-android.library.reference.3=libs/google-play-services_lib
-android.library.reference.4=libs/ab-pull-to-refresh
+android.library=true
