--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           android:versionCode="111" android:versionName="1.0.1"
-          package="be.ugent.zeus.hydra">
+          package="be.ugent.zeus.hydra"
+          android:installLocation="auto">
     <!-- versionCode format: 
    	x     -> major changes new features 
    	x.y   -> coole update
