--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -19,7 +19,7 @@
     
     <uses-feature
         android:glEsVersion="0x00020000"
-        android:required="true"/>
+        android:required="false"/>
 
     <permission
         android:name="be.ugent.zeus.hydra.permission.MAPS_RECEIVE"
