--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -106,12 +106,20 @@
 
         </activity>
         <activity android:name=".ActivityItemActivity"
-                  android:configChanges="screenSize|orientation">             
+                  android:configChanges="screenSize|orientation"
+                  android:launchMode="singleTask">            
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".Calendar" />   
-
         </activity>
+        
+        <activity android:name=".ActivityLocationMap"
+                  android:configChanges="screenSize|orientation" >       
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".ActivityItemActivity" />
+        </activity>
+        
         <activity android:name=".Info"
                   android:configChanges="screenSize|orientation">             
             <meta-data
