Update pod specs

--- a/iOS/Podfile
+++ b/iOS/Podfile
@@ -1,15 +1,15 @@
-platform :ios, '5.0'
+platform :ios, '6.0'
 
 pod 'GoogleAnalytics-iOS-SDK',  '~> 3.0'
-pod 'TestFlightSDK',            '~> 2.0'
+pod 'TestFlightSDK',            '~> 3.0'
 pod 'Facebook-iOS-SDK',         '~> 3.7'
 pod 'SVProgressHUD',            '~> 0.9'
 pod 'SDWebImage',               '~> 3.4'
 pod 'RestKit',                  '~> 0.20.0'
-pod 'ShareKit/Facebook',        '~> 2.3'
-pod 'ShareKit/Twitter',         '~> 2.3'
+pod 'ShareKit/Facebook',        '~> 2.5'
+pod 'ShareKit/Twitter',         '~> 2.5'
 pod 'RKXMLReaderSerialization', :podspec => 'External/RKXMLReaderSerialization.podspec'
-pod 'TUSafariActivity',         :podspec => 'External/TUSafariActivity.podspec'
+pod 'TUSafariActivity',         '~> 1.0'
 pod 'SMPageControl',            '~> 1.1'
 pod 'Reachability',             '~> 3.1.1'
 pod 'VTAcknowledgementsViewController', '~> 0.6'
