--- a/iOS/Podfile
+++ b/iOS/Podfile
@@ -13,3 +13,4 @@ pod 'TUSafariActivity',         '~> 1.0'
 pod 'SMPageControl',            '~> 1.1'
 pod 'Reachability',             '~> 3.1.1'
 pod 'VTAcknowledgementsViewController', '~> 0.6'
+pod 'PKRevealController', '~> 2.0'
