--- a/iOS/Podfile
+++ b/iOS/Podfile
@@ -12,4 +12,5 @@ pod 'TUSafariActivity',         :podspec => 'External/TUSafariActivity.podspec'
 pod 'SMPageControl',            '~> 1.2'
 pod 'Reachability',             '~> 3.2'
 pod 'VTAcknowledgementsViewController', '~> 0.13'
-pod "RMPickerViewController", "~> 1.3.3"
+pod "RMPickerViewController",   "~> 1.3.3"
+pod 'PKRevealController',       '~> 2.0'
