--- a/.travis.yml
+++ b/.travis.yml
@@ -12,10 +12,10 @@ branches:
   - master
 before_install:
 - openssl aes-256-cbc -K $encrypted_5ba2058eb1b7_key -iv $encrypted_5ba2058eb1b7_iv
-  -in id_travis_rsa.enc -out ~\/.ssh/id_travis_rsa -d
+  -in id_travis_rsa.enc -out ~/.ssh/id_travis_rsa -d
 - eval "$(ssh-agent -s)"
-- chmod 600 ./id_travis_rsa
-- ssh-add ./id_travis_rsa
+- chmod 600 ~/.ssh/id_travis_rsa
+- ssh-add ~/.ssh/id_travis_rsa
 deploy:
   provider: script
   script: bash deploy.sh
