--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ addons:
   apt:
     packages:
     - openjdk-8-jre  # install Java8 as required by vnu.jar
-  ssh_known_hosts: git.zeus.gent:2222
+  ssh_known_hosts: git.zeus.gent
 install:
 - npm install -g ajv-cli
 - pip install html5validator --user
