--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,14 @@
 language: node_js
 node_js:
 - '8'
+git:
+  # Disable git submodules, because Travis does not support the SSL/TLS certificate on git.zeus.gent
+  # This is currenlty not a problem; we don't need the submodules for tests.
+  submodules: false
 addons:
   apt:
     packages:
     - openjdk-8-jre  # install Java8 as required by vnu.jar
-  ssh_known_hosts: git.zeus.gent
 install:
 - npm install -g ajv-cli
 - pip install html5validator --user
