--- a/.travis.yml
+++ b/.travis.yml
@@ -8,12 +8,15 @@ jdk:
 python:
   - "3.7"
 
+addons:
+  ssh_known_hosts: zeus.ugent.be
+
 before_install:
   - openssl aes-256-cbc -K $encrypted_543dd1a78d58_key -iv $encrypted_543dd1a78d58_iv
     -in deploy_key.enc -out .\\deploy_key -d
   - eval "$(ssh-agent -s)"
   - chmod 600 ./deploy_key
-  - echo -e "Host zeus.ugent.be\n\tStrictHostKeyChecking no\n" >> ~/.ssh/config
+  #- echo -e "Host zeus.ugent.be\n\tStrictHostKeyChecking no\n" >> ~/.ssh/config
   - ssh-add ./deploy_key
 
 # Install the tool for the tests.
@@ -31,6 +34,6 @@ branches:
 
 deploy:
   - provider: script
-    script: "./server/deploy.sh"
+    script: ./server/deploy.sh ./server/
     on:
       branch: master
