--- a/.travis.yml
+++ b/.travis.yml
@@ -12,28 +12,28 @@ addons:
   ssh_known_hosts: zeus.ugent.be
 
 before_install:
-  - openssl aes-256-cbc -K $encrypted_543dd1a78d58_key -iv $encrypted_543dd1a78d58_iv
-    -in deploy_key.enc -out .\\deploy_key -d
-  - eval "$(ssh-agent -s)"
-  - chmod 600 ./deploy_key
-  #- echo -e "Host zeus.ugent.be\n\tStrictHostKeyChecking no\n" >> ~/.ssh/config
-  - ssh-add ./deploy_key
+- openssl aes-256-cbc -K $encrypted_9715c79dd19b_key -iv $encrypted_9715c79dd19b_iv
+  -in deploy_key.enc -out ./deploy_key -d
+- eval "$(ssh-agent -s)"
+- chmod 600 ./deploy_key
+#- echo -e "Host zeus.ugent.be\n\tStrictHostKeyChecking no\n" >> ~/.ssh/config
+- ssh-add ./deploy_key
 
 # Install the tool for the tests.
 # The requirements for the deployment test are installed by the scripts themselves.
 before_script:
-  - npm install -g ajv-cli@3.0.0
-  - pip install html5validator==0.3.1
+- npm install -g ajv-cli@3.0.0
+- pip install html5validator==0.3.1
 
 script:
-  - "./server/test.sh"
+- "./server/test.sh"
 
 branches:
   only:
-    - master
+  - master
 
 deploy:
-  - provider: script
-    script: ./server/deploy.sh ./server/
-    on:
-      branch: master
+- provider: script
+  script: ./server/deploy.sh ./server/
+  on:
+    branch: master
