--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ before_install:
 # The requirements for the deployment test are installed by the scripts themselves.
 before_script:
 - npm install -g ajv-cli@3.0.0
-- pip install html5validator==0.3.1
+- pip3 install html5validator==0.3.1
 
 script:
 - "./server/test.sh"
