--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ jdk:
   openjdk8
 
 python:
-  - "3.7"
+  - "3.6"
 
 addons:
   ssh_known_hosts: zeus.ugent.be
@@ -23,7 +23,7 @@ before_install:
 # The requirements for the deployment test are installed by the scripts themselves.
 before_script:
 - npm install -g ajv-cli@3.0.0
-- pip3 install html5validator==0.3.1
+- pip3.6 install html5validator==0.3.1 --user
 
 script:
 - "./server/test.sh"
