--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,13 @@
-language: node_js
+language: generic
+
+# We need nodejs for some json tests
 node_js:
   - "8"
 
+# We need the JDK for HTML test
 jdk:
   openjdk8
+
 
 python:
   - "3.6"
@@ -23,7 +27,7 @@ before_install:
 # The requirements for the deployment test are installed by the scripts themselves.
 before_script:
 - npm install -g ajv-cli@3.0.0
-- pip3.6 install html5validator==0.3.1 --user
+- pip3.6.3 install html5validator==0.3.1 --user
 
 script:
 - "./server/test.sh"
