Add coreutils to dependencies

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,8 @@ addons:
   ssh_known_hosts: zeus.ugent.be
 
 before_install:
+# - sudo apt-get update
+- sudo apt-get install -y coreutils
 - openssl aes-256-cbc -K $encrypted_9715c79dd19b_key -iv $encrypted_9715c79dd19b_iv
   -in deploy_key.enc -out ./deploy_key -d
 - eval "$(ssh-agent -s)"
