Prevent Travis from deleting files after script phase

--- a/.travis.yml
+++ b/.travis.yml
@@ -39,7 +39,8 @@ branches:
   - master
 
 deploy:
-- provider: script
+  provider: script
   script: ./server/deploy.sh ./server/
+  skip_cleanup: true
   on:
     branch: master
