--- a/.travis.yml
+++ b/.travis.yml
@@ -31,6 +31,7 @@ before_install:
 before_script:
 - npm install -g ajv-cli@3.0.0
 - pip install html5validator==0.3.1 --user
+- sudo apt-get install -y shellcheck
 
 script:
 - "./server/test.sh"
