--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
-dist: bionic
+dist: xenial
 language: generic
 
 # We need following base languages and versions:
 # - Python >= 3.6 (tested on 3.7)
-# - Node >= 8 (tested on 10.16)
+# - Node >= 8 (tested on 8.12)
 # - Java >= 8 (tested on 11)
 
 addons:
@@ -14,7 +14,7 @@ addons:
       - shellcheck
       - librsvg2-bin
       - imagemagick
-      - libmagickcore-6.q16-3-extra
+      - libmagickcore-extra
 
 before_install:
   - openssl aes-256-cbc -K $encrypted_9715c79dd19b_key -iv $encrypted_9715c79dd19b_iv -in deploy_key.enc -out ./deploy_key -d
