--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Install Python dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install html5validator==0.3.1
+          pip install html5validator==0.4.0
       - name: Set up Node
         uses: actions/setup-node@v2
         with:
@@ -29,4 +29,6 @@ jobs:
         run: |
           npm install -g ajv-cli@3.0.0
       - name: Run tests
-        run: "./server/test.sh"
+        run: |
+          html5validator --version
+          "./server/test.sh"
