--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,11 +1,9 @@
 name: Deploy
 
-# Temporary
-on: [ push ]
-#on:
-#  push:
-#    branches:
-#      - master
+on:
+ push:
+   branches:
+     - master
 
 jobs:
   deploy:
