--- a/server/admin/docker-compose.yml
+++ b/server/admin/docker-compose.yml
@@ -4,9 +4,9 @@ services:
   app:
     build: .
     ports:
-      - 5000:5000
+      - 8000:8000
     environment:
-      FLASK_ENV: production
-      PUBLIC_DIR: /hydra_public
+      FLASK_ENV: 'production'
+      PUBLIC_DIR: '/hydra_public'
     volumes:
     - ../public:/hydra_public
