--- a/server/admin/docker-compose.yml
+++ b/server/admin/docker-compose.yml
@@ -8,5 +8,7 @@ services:
     environment:
       FLASK_ENV: 'production'
       PUBLIC_DIR: '/hydra_public'
+      SCRAPER_DIR: '/hydra_scraper'
     volumes:
     - ../public:/hydra_public
+    - ../scraper:/hydra_scraper
